--- a/LibrarySystem_ver2.html
+++ b/LibrarySystem_ver2.html
@@ -31,7 +31,7 @@
   }
 
   function loadLibrary(libraryName) {
-    if (libraryStorage[libraryName] == undefined) {
+    if (!libraryStorage[libraryName]) {
       return 'There is no such library'
     } else {
       var libraryName = libraryStorage[libraryName];
@@ -39,7 +39,7 @@
       var dependencies_ids = libraryName['dependencies_ids'];
       var string = libraryName['string'];
       var dependenciesValues = dependencies.map(function(currentValue) {
-        if (libraryStorage[currentValue] == undefined) {
+        if (!libraryStorage[currentValue]) {
           return 'undefined';
         } else {
           return libraryStorage[currentValue]['string'];
